<resources>
    <string name="app_name">Smart Museum App</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="ticket">Ticketing</string>
    <string name="event">Events</string>
    <string name="map">Location</string>
    <string name="calande">Calander</string>
    <string name="shoping">Shop</string>
    <string name="become_a_member">Become a Member</string>
    <string name="donate">Donation</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calander">Calander</string>
    <string name="donation">Donation</string>
    <string name="membership">Membership</string>
    <string name="rateus">RateUs</string>
    <string name="ticketing">Ticketing</string>
    <string name="shop">Shop</string>
    <string name="events">Events</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
</resources>